--- a/libs/sample-lib/package.json
+++ b/libs/sample-lib/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsc",
-    "build": "tsc"
+    "build": "tsc",
+    "tsc": "tsc"
   },
   "keywords": [],
   "author": "",
