--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.10",
     "nx": "19.7.2",
-    "prettier": "^3.0.0",
-    "husky": "^8.0.0"
+    "prettier": "^3.0.0"
   }
 }
